Complete version: filter pages fixed, CSV download implemented, % added on main page, Deactivate user option/page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
  @import "font-awesome-sprockets";
  @import "bootstrap";
  @import 'datetime_picker_input'; 
+ @import 'overwrite_bootstrap';
 
 
  
