--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,12 @@
 <div class="booyah-box col-10 offset-1">
   <h1>Edit Profile Details for </h1>
   <%= simple_form_for @user do |f| %>
-    <%= f.input :fname %>
-    <%= f.input :lname %>
-    <%= f.input :role %>
-    <%= f.input :email %>
-    <%= f.input :is_admin %>
-    <%= f.input :is_approved %>
+    <%= f.input :fname, :label => "First Name" %>
+    <%= f.input :lname, :label => "Last Name"%>
+    <%= f.input :role, :label => "Role" %>
+    <%= f.input :email, :label => "Email" %>
+    <%= f.input :is_admin, :label => "Admin" %>
+    <%= f.input :is_approved, :label => "Approved" %>
     <br />
     <%= f.submit 'Update', class: 'btn btn-primary' %>
   <% end %>
