--- a/app/views/hourlogs/new.html.erb
+++ b/app/views/hourlogs/new.html.erb
@@ -2,7 +2,7 @@
 <div class="booyah-box col-10 offset-1">
   <h1>Log your hours</h1>
   <%= simple_form_for @hourlog do |f| %>
-    <%= f.input :name %>
+    <%= f.input :name, :input_html => { :value => @current_user.fname + ' ' + @current_user.lname} %>
     <div class="row">
         <div class ="col-6">
           <%= f.input :project_id, :collection => @projects, label_method: :name, value_method: :id, label: "Choose Project", include_blank: true %>
